--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -35,7 +35,7 @@
             </div>
         </div>
     </div>
-    <div class="row mt-5">
+    <!-- <div class="row mt-5">
         <div class="col-md-6 mb-4">
             <div class="card align-items-center">
                 <div class="card-body ">
@@ -91,6 +91,8 @@
                 <button type="button" class="btn btn-secondary  pl pr w-50  mb-3">Read More</button>
             </div>
         </div>
-    </div>
+    </div> -->
+
+    
 </div>
 {% endblock content %}
