--- a/templates/editor/dashboard.html
+++ b/templates/editor/dashboard.html
@@ -1,7 +1,7 @@
 {% extends '../base.html' %}
 {% load static %}
 {% block content %}
-<div class="container">
+<!-- <div class="container">
     
     <div class="row mt-5">
         <div class="col-md-6 mb-4">
@@ -60,5 +60,5 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 {% endblock content %}
