--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -24,12 +24,10 @@
                 <div class="card-body">
                     <h3>My Team</h3>
                     <ul>
-                        <li><button type="button" class="btn btn-secondary pl pr w-50  mt-3 mb-3">Team
-                                X</button></li>
-                        <li><button type="button" class="btn btn-secondary pl pr w-50 mb-3">Team
-                                Y</button></li>
-                        <li><button type="button" class="btn btn-secondary pl pr w-50 mb-3">Team
-                                Z</button></li>
+                        <!-- <li><button type="button" class="btn btn-secondary pl pr w-50  mt-3 mb-3">Team
+                                X</button>
+                        </li> -->
+
                     </ul>
                 </div>
             </div>
@@ -93,6 +91,6 @@
         </div>
     </div> -->
 
-    
+
 </div>
 {% endblock content %}
