--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -78,6 +78,12 @@ ul{
 {
     white-space: nowrap;
 }
+
+textarea 
+{
+    resize:none;
+}
+
   
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
@@ -106,11 +112,11 @@ label
     display:flex;
     margin:25px;
 }
-.card
+/* .card
 {
     border:1px solid #000000;
 
-}
+} */
 /* Login */
 
 /* Admin Dashboard */
