--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,8 @@
   <link rel="icon" href="{% static 'images/favicon.ico' %}">
   <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
   <link href="{% static 'css/styles.css'%}" rel="stylesheet">
+  <link href="{% static 'css/super_admin.css'%}" rel="stylesheet">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 
@@ -51,11 +53,13 @@
 
           {% if current_user or current_subuser %}
 
+          <!-- Super Admin -->
+
           {% if current_user.user_type == 'super_admin' %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'super_admin_dashboard' %}">Dashboard</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="{% url 'admins' %}">Admins</a>
           </li>
           <li class="nav-item">
@@ -63,12 +67,15 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'users' %}">Users</a>
-          </li>
+          </li> -->
 
           <li class="nav-item">
             <a class="nav-link" href="{% url 'super_admin_dashboard' %}">Company</a>
           </li>
           {% endif %}
+
+          <!-- Super Admin -->
+
 
           <!-- Admin -->
           {% if current_user.user_type == 'admin' %}
@@ -88,6 +95,8 @@
                   data-company-name="{{ company.company_name }}">{{ company.company_name }}</a></li>
               {% endfor %}
               {% endif %}
+
+              <li><a class="dropdown-item" href="{% url 'add_company' %}">Add</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -180,7 +189,7 @@
           <img src="{% static 'images/img_avatar.png' %}" alt="logo" style="width:40px;" class="rounded-pill">
         </a>
         <p class="text-success">
-          Username : <b>{% if current_user %}
+          <b>{% if current_user %}
             {{ current_user.username}}
             ({{current_user.user_type}})
             {% endif %}
@@ -189,13 +198,13 @@
             ({{current_subuser.user_type}})
             {% endif %}
           </b> <br>
-          User ID : <b>{% if current_user %}
-            {{ current_user.user_id}}
-            ({{current_user.role}})
+          <b>{% if current_user %}
+            
+            {{current_user.company_type}}
             {% endif %}
             {% if current_subuser %}
-            {{ current_subuser.subuser_id}}
-            ({{current_user.role}})
+            
+            {{current_user.company_type}}
             {% endif %}
           </b> <br>
 
