--- a/templates/base.html
+++ b/templates/base.html
@@ -92,7 +92,7 @@
               {% if current_user_companies %}
               {% for company in current_user_companies %}
               <li><a class="dropdown-item company-select" href="#" data-company-id="{{ company.company_id }}"
-                  data-company-name="{{ company.company_name }}">{{ company.company_name }}</a></li>
+                  data-company-name="{{ company.company_name }}">{{ company.company_name }} -  <a href="{% url 'update_company' company.company_id %}" style="position: absolute;top: 13px;right: 10px;">Update</a></a></li>
               {% endfor %}
               {% endif %}
 
@@ -103,7 +103,8 @@
             <a class="nav-link" href="#">Investor</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">CA Firms</a>
+            <a class="nav-link" href="#"> Enablers</a>
+            <!-- ca firm -->
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">My Team</a>
@@ -143,7 +144,7 @@
             <a class="nav-link" href="#">Investor</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">CA Firms</a>
+            <a class="nav-link" href="#">Enablers</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">My Team</a>
