--- a/templates/sign_up_new.html
+++ b/templates/sign_up_new.html
@@ -78,7 +78,7 @@
                             <option value="" disabled selected>Select your option</option>
                             <option value="Startup">Startup</option>
                             <option value="Investor">Investor</option>
-                            <option value="CA_firm">CA Firm</option>
+                            <option value="CA_firm"> Enablers</option>
                         </select>
                     </div>
                 </div>
