--- a/templates/admin/company_profile.html
+++ b/templates/admin/company_profile.html
@@ -112,15 +112,19 @@
     }
 </style>
 
+
+
+
+
 <div class="sidebar">
     <h2>Features</h2>
-    <a class="dropdown-btn">PROFILE<span class="edit-icon">&nbsp;&#9998;</span></a>
+    <a class="dropdown-btn" href="#">PROFILE<span class="edit-icon">&nbsp;&#9998;</span></a>
     <div class="dropdown-container">
-        <a href="#" data-info="{{ company_profile.excecutive_summary }}">Executive summary</a>
-        <a href="#" data-info="Industry: {{ company_profile.type_of_industry }}<br>No. of Employees: {{ company_profile.no_of_employees }}">Business Profile</a>
-        <a href="#" data-info="{{ company_profile.technology_profile }}">Technology Profile</a>
-        <a href="#" data-info="{% for product in Products %}{{ product.product_name }}<br>{% endfor %}">Product List</a>
-        <a href="#" data-info="CEO: {{ company_profile.ceo }}<br>CFO: {{ company_profile.cfo }}<br>CMO: {{ company_profile.cmo }}<br>VP: {{ company_profile.vp }}">Organization chart</a>
+        <a href="{% url 'comprehensive_profile' %}" data-info="{{ company_profile.excecutive_summary }}">Executive summary</a>
+        <a href="{% url 'comprehensive_profile' %}" data-info="Industry: {{ company_profile.type_of_industry }}<br>No. of Employees: {{ company_profile.no_of_employees }}">Business Profile</a>
+        <a href="{% url 'comprehensive_profile' %}" data-info="{{ company_profile.technology_profile }}">Technology Profile</a>
+        <a href="{% url 'comprehensive_profile' %}" data-info="{% for product in Products %}{{ product.product_name }}<br>{% endfor %}">Product List</a>
+        <a href="{% url 'comprehensive_profile' %}" data-info="CEO: {{ company_profile.ceo }}<br>CFO: {{ company_profile.cfo }}<br>CMO: {{ company_profile.cmo }}<br>VP: {{ company_profile.vp }}">Organization chart</a>
     </div>
     <a class="dropdown-btn">CORPORATE FINANCE</a>
     <div class="dropdown-container">
@@ -161,6 +165,77 @@
 <div class="info-card" id="infoCard">
     <p id="infoContent">Hover over a submenu item to see details here.</p>
 </div>
+
+
+
+
+
+
+
+
+{% if not company_profile or not products %}
+
+<div class="container" style="margin-left:270px">
+    <form method="post">
+        {% csrf_token %}
+        <div class="row mt-5 mb-5">
+            <h4 class="mb-4 text-center">Please Add Company Profile</h4>
+            <div class="col-md-6">  
+                
+                <div class="mb-3 mt-3 inline">
+                    <label for="excecutive_summary">Excecutive Summary</label>
+                    <textarea class="form-control w-50" rows="6"  name="excecutive_summary" required></textarea>
+                </div>
+                <div class="mb-3 mt-3 inline">
+                    <label for="technology_profile">Technology Profile</label>
+                    <textarea class="form-control w-50" rows="6"  name="technology_profile" required></textarea>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="mb-3 mt-3 inline">
+                    <label for="type_of_industry">Type of Industry</label>
+                    <input type="text" class="form-control w-50" name="type_of_industry" required>
+                </div>
+                <div class="mb-3 mt-3 inline">
+                    <label for="no_of_employees">no_of_employees</label>
+                    <input type="number" class="form-control w-50" name="no_of_employees" required>
+                </div>
+
+                <div class="mb-3 mt-3 inline">
+                    <label for="ceo">CEO</label>
+                    <input type="text" class="form-control w-50" name="ceo" required>
+                </div>
+                <div class="mb-3 mt-3 inline">
+                    <label for="cfo">CFO</label>
+                    <input type="text" class="form-control w-50" name="cfo" required>
+                </div>
+                <div class="mb-3 mt-3 inline">
+                    <label for="cmo">CMO</label>
+                    <input type="text" class="form-control w-50" name="cmo" required>
+                </div>
+                <div class="mb-3 mt-3 inline">
+                    <label for="vp">VP</label>
+                    <input type="text" class="form-control w-50" name="vp" required>
+                </div>
+
+
+                <div class="mb-3 mt-3 inline">
+                    <label for="product_name">Products</label>
+                    <input type="text" class="form-control w-50" name="product_name" required>
+                </div>
+            </div>
+            
+        </div>
+        
+       
+        
+        <div class="text-center mt-5 mb-3">
+            <button type="submit" class="btn btn-secondary border-radius pl pr mb-3">Submit</button>
+        </div>
+    </form>
+</div>
+{% endif %}
+
 
 <script>
     /* JavaScript for toggling the dropdown menus */
