--- a/templates/super_admin/admins.html
+++ b/templates/super_admin/admins.html
@@ -44,7 +44,7 @@
                             <th>Username</th>
                             <th>User Type</th>
                             <th>Company Type</th>
-                            <th>Edit</th>
+                            <!-- <th>Edit</th> -->
                             <th>Delete</th>
 
                         </tr>
@@ -59,7 +59,7 @@
                             <td>{{ admin.username }}</td>
                             <td>{{ admin.user_type }}</td>
                             <td>{{ admin.role }}</td>
-                            <td><a href="#" onclick="return confirmEdit('{{ user.user_id }}')"><i class="fa fa-pen"></i></a></td>
+                            <!-- <td><a href="#" onclick="return confirmEdit('{{ user.user_id }}')"><i class="fa fa-pen"></i></a></td> -->
                             <td><a href="#" onclick="return confirmDelete('{{ user.user_id }}')"><i class="fa fa-trash-alt"></i></a></td>
                             
                         </tr>
