--- a/templates/super_admin/companies.html
+++ b/templates/super_admin/companies.html
@@ -40,7 +40,7 @@
                             <th>Founder Email</th>
                             <th>Founder Linkedin URL</th>
                             <th>Founder Phone Number</th>
-                            <th>Edit</th>
+                            <!-- <th>Edit</th> -->
                             <th>Delete</th>
 
                         </tr>
@@ -59,7 +59,7 @@
                             <td>{{ company.founder_email }}</td>
                             <td>{{ company.founder_linkedin_url }}</td>
                             <td>{{ company.founder_phone_number }}</td>                            
-                            <td><a href="#" onclick="return confirmEdit('{{ company.company_id }}')"><i class="fa fa-pen"></i></a></td>
+                            <!-- <td><a href="#" onclick="return confirmEdit('{{ company.company_id }}')"><i class="fa fa-pen"></i></a></td> -->
                             <td><a href="#" onclick="return confirmDelete('{{ company.company_id }}')"><i class="fa fa-trash-alt"></i></a></td>
                             
                         </tr>
