--- a/templates/super_admin/editors.html
+++ b/templates/super_admin/editors.html
@@ -45,7 +45,7 @@
                             <th>Role</th>
                             <th>Creator ID</th>
                             <th>Company ID</th>
-                            <th>Edit</th>
+                            <!-- <th>Edit</th> -->
                             <th>Delete</th>
 
                             
@@ -62,7 +62,7 @@
                             <td>{{ editor.user_type }}</td>
                             <td>{{ editor.creator_id }}</td>
                             <td>{{ editor.company_id }}</td>
-                            <td><a href="#" onclick="return confirmEdit('{{ editor.subuser_id }}')"><i class="fa fa-pen"></i></a></td>
+                            <!-- <td><a href="#" onclick="return confirmEdit('{{ editor.subuser_id }}')"><i class="fa fa-pen"></i></a></td> -->
                             <td><a href="#" onclick="return confirmDelete('{{ editor.subuser_id }}')"><i class="fa fa-trash-alt"></i></a></td>
                             
                         </tr>
