--- a/templates/super_admin/startups.html
+++ b/templates/super_admin/startups.html
@@ -36,7 +36,7 @@
                             <th>Username</th>
                             <th>User Type</th>
                             <th>Company Type</th>
-                            <th>Edit</th>
+                            <!-- <th>Edit</th> -->
                             <th>Delete</th>
 
                         </tr>
@@ -51,7 +51,7 @@
                             <td>{{ startup.username }}</td>
                             <td>{{ startup.user_type }}</td>
                             <td>{{ startup.role }}</td>
-                            <td><a href="#" onclick="return confirmEdit('{{ startup.user_id }}')"><i class="fa fa-pen"></i></a></td>
+                            <!-- <td><a href="#" onclick="return confirmEdit('{{ startup.user_id }}')"><i class="fa fa-pen"></i></a></td> -->
                             <td><a href="#" onclick="return confirmDelete('{{ startup.user_id }}')"><i class="fa fa-trash-alt"></i></a></td>
                             
                         </tr>
